<resources>
    <string name="app_name">MercadoL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Buscar</string>
    <string name="menu_slideshow">Mi perfil</string>
    <string name="menu_fav">Mi perfil</string>
    <string name="menu_cara">Categorias</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_quit">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>