<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_fav"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_cat"
            android:title="@string/menu_cara" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_quit"
            android:title="@string/menu_quit" />
    </group>
</menu>